tests/sema/fail/v35_fail_ptr_unknown_function.ep
# COMPILE_FAIL_CONTAINS: ptr cannot take the address of unknown function missing

fun main(): void {
    let callback = ptr(missing)
}
